LUT-29154 : Conversion from bootstrap 4 to bootstrap 5 in the pluginwizard form

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/errors_handler.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/errors_handler.html
@@ -1,11 +1,12 @@
 <!-- Errors handling -->
 <#if errors??>
-<#if errors?size &gt; 0 >
-<div class="alert alert-danger">
-    <a class="close" data-dismiss="alert" href="#">x</a>
-    <#list errors as error >
-    <i class="glyphicon glyphicon-exclamation-sign"></i> ${error.message} <br>
-    </#list>
-</div>
+	<#if errors?size gt 0 >
+		<div class="alert alert-danger alert-dismissible fade show" role="alert">
+		    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		    <#list errors as error >
+		    	<i class="ti ti-exclamation-circle"></i> ${error.message} <br>
+		    </#list>
+		</div>
+	</#if>
 </#if>
-</#if>
+<!-- End Errors handling -->
