--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/infos_handler.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/infos_handler.html
@@ -1,11 +1,12 @@
 <!-- Infos handling -->
 <#if infos??>
-<#if infos?size &gt; 0 >
-<div class="alert alert-info">
-    <a class="close" data-dismiss="alert" href="#">x</a>
-    <#list infos as info >
-    <i class="glyphicon glyphicon-info-sign"></i> ${info.message} <br>
-    </#list>
-</div>
+	<#if infos?size gt 0 >
+		<div class="alert alert-info alert-dismissible fade show" role="alert">
+    		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    		<#list infos as info >
+    			<i class="ti ti-info-circle"></i> ${info.message} <br>
+    		</#list>
+		</div>
+	</#if>
 </#if>
-</#if>
+<!-- End Infos handling -->
