--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/message_confirmation.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/message_confirmation.html
@@ -11,7 +11,7 @@
                     <a href="${messageBox.urlButton1}" class="btn btn-primary" >
                         #i18n{portal.util.labelYes}
                     </a>
-                    <a href="${messageBox.urlButton2}" class="btn btn-default" >
+                    <a href="${messageBox.urlButton2}" class="btn btn-secondary" >
                         #i18n{portal.util.labelCancel}
                     </a>
                 </div>
