--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_attribute.html
@@ -1,62 +1,91 @@
-<#include "sidebar.html" />   
+<#include "sidebar.html" />
 
 <div class="row">
-	<div class="container">
-		<div class="panel panel-default">
-			<div class="panel-body">
-				<div class="col-md-3">             
-					<@sidebar step="model" />
-					<div class="well">         
-						#i18n{pluginwizard.pluginwizard_create_attribute.pageHelp}   
-					</div>  
-				</div>
+	<div class="container mt-4" style="font-size: 14px; line-height: 1.42857143;">
+		<div class="card">
+			<div class="card-body">
+				<div class="row">
+                    
+                    <!-- Side Bar-->
+                    <div class="col-md-3">
+                        <@sidebar step="model" />
+                        <div class="card bg-light mt-2">
+                            <div class="card-body">
+                                <div class="card-text">
+                                    #i18n{pluginwizard.pluginwizard_create_attribute.pageHelp}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End Side Bar-->
 
+                    <!-- Card Content-->
+                    <div class="col-md-9">
+                        <form class="form-horizontal" role="form" method="post" action="jsp/site/Portal.jsp">
+                            <fieldset>
+                                <legend>#i18n{pluginwizard.pluginwizard_create_attribute.pageTitle}</legend>
+                                
+                                <#include "errors_handler.html" />
 
-				<div class="col-md-9">
-					<form class="form-horizontal" role="form" method="post" action="jsp/site/Portal.jsp" >  
-						<fieldset>
-							<legend>#i18n{pluginwizard.pluginwizard_create_attribute.pageTitle}</legend>
-							<input type="hidden" name="page" value="pluginwizard" />        
-							<input type="hidden" name="business_class_id" value="${business_class_id}" />  
+                                <input type="hidden" name="page" value="pluginwizard" />
+                                <input type="hidden" name="business_class_id" value="${business_class_id}" />
 
-							 <#include "errors_handler.html" />
+                                <!-- Group form attribute name -->
+                                <div class="row mb-3 align-items-center">
+                                    <label class="col-form-label col-md-2 text-end">
+                                        #i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeName} * :
+                                    </label>
+                                    <div class="col-md-10">
+                                        <input type="text" class="form-control" name="attribute_name" 
+                                               value="${attribute.attributeName!}" size="30" />
+                                    </div>
+                                </div>
 
-							<div class="form-group">
-								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeName} * :</label>      
-								<div class="col-md-9">    
-									<input type="text" class="form-control input-md" name="attribute_name" value="${attribute.attributeName!}" size="30" />      
-								</div>
-							</div>
+								<!-- Group form attribute type -->
+                                <div class="row mb-3 align-items-center">
+                                    <label class="col-form-label col-md-2 text-end">
+                                        #i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeType} * :
+                                    </label>
+                                    <div class="col-md-10">
+                                        <@select name="attribute_type_id" 
+                                                 default_value="${attribute.attributeTypeId!'1'}" 
+                                                 class='form-control input-md' 
+                                                 items=combo_attribute_type />
+                                    </div>
+                                </div>
+								
+								<!-- Group form Mandatory-->
+                                <div class="row mb-3 align-items-center">
+                                    <label class="col-form-label col-md-2 text-end">
+                                        #i18n{pluginwizard.pluginwizard_create_attribute.labelMandatory} * : 
+                                    </label>
+                                    <div class="col-md-10">
+                                        <div class="checkbox">    
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" name="not_null" value="1" 
+                                            	   <#if attribute?? && attribute.notNull>checked</#if>/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
 
-							<div class="form-group">
-								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelAttributeType} * :</label>      
-								<div class="col-md-9">       
-									<@select name="attribute_type_id" default_value="${attribute.attributeTypeId!'1'}" class='form-control input-md' items=combo_attribute_type />      
-								</div> 
-							</div>
-
-							<div class="form-group">
-								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_attribute.labelMandatory} * : </label>                            
-								<div class="col-md-9"> 
-									<input class="checkbox" type="checkbox" name="not_null" value="1" <#if attribute?? && attribute.notNull>checked="checked"</#if>/>
-								</div>  
-							</div>
-
-							<div class="form-group">                                          
-							<div class="col-md-offset-3 col-md-9">
-								<button type="submit" name="action_createAttribute" class="btn btn-primary">
-									#i18n{pluginwizard.pluginwizard_create_attribute.buttonCreateAttribute}
-								</button>                    
-								<button type="submit" name="view_modifyBusinessClass" class="btn btn-default">
-									#i18n{pluginwizard.pluginwizard_create_attribute.buttonBack}
-								</button>  
-							</div>					
-							</div>    
-						</fieldset>
-					</form>        
-				</div>    
-				<div class="clearfix"></div>
-			</div>
-		</div>
-	</div>
+								<!-- Submit Buttons -->
+								<div class="row mb-3">
+                                    <div class="col-md-9 offset-md-3">
+                                        <button type="submit" name="action_createAttribute" class="btn btn-primary me-2">
+                                            #i18n{pluginwizard.pluginwizard_create_attribute.buttonCreateAttribute}
+                                        </button>
+                                        <button type="submit" name="view_modifyBusinessClass" class="btn btn-secondary">
+                                            #i18n{pluginwizard.pluginwizard_create_attribute.buttonBack}
+                                        </button>
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
+                    <!-- End Card Content-->
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
