--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_business_class.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_business_class.html
@@ -1,54 +1,74 @@
-<#include "sidebar.html" />   
+<#include "sidebar.html" />
 
-<div class="row">
-	<div class="container">
-		<div class="panel panel-default">
-			<div class="panel-body">
-				<div class="col-md-3">             
-					<@sidebar step="model" />
-					<div class="well">
-						#i18n{pluginwizard.pluginwizard_create_business_class.pageHelp}   
-					</div>  
-				</div>
+<div class="container mt-4" style="font-size: 14px; line-height: 1.42857143;">
+	<div class="row">
+		<div class="card">
+			<div class="card-body">
+				<div class="row">
+					
+					<!-- Side Bar-->
+					<div class="col-md-3">
+                        <@sidebar step="model" />
+                        <div class="card bg-light mt-2">
+                            <div class="card-body">
+                                <div class="card-text">
+                                    #i18n{pluginwizard.pluginwizard_create_business_class.pageHelp}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+					<!-- End Side Bar-->
 
-				<div class="col-md-9">
+					<!-- Card Content-->
+                    <div class="col-md-9">
+                        <form class="form-horizontal" method="post" action="jsp/site/Portal.jsp">
+                            <fieldset>
+                                <legend>#i18n{pluginwizard.pluginwizard_create_business_class.pageTitle}</legend>
+                                
+                                <#include "errors_handler.html" />
+								
+								<input type="hidden" name="page" value="pluginwizard" />
+								
+                                <!-- Group form business class name -->
+                                <div class="row mb-3 align-items-center">
+                                    <label class="col-form-label col-md-2 text-end">
+                                        #i18n{pluginwizard.pluginwizard_create_business_class.labelBusinessClass} * :
+                                    </label>
+                                    <div class="col-md-10">
+                                        <input class="form-control" type="text" name="business_class"
+                                               value="" size="30" />
+                                    </div>
+                                </div>
 
-					<form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >                    
-						<input type="hidden" name="page" value="pluginwizard" />        
-						<fieldset>
-							<legend>#i18n{pluginwizard.pluginwizard_create_business_class.pageTitle}</legend>
-
-							 <#include "errors_handler.html" />
-
-							 <div class="form-group">
-								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_business_class.labelBusinessClass} *:</label>      
-								<div class="col-md-9">    
-									<input class="form-control input-md" type="text" name="business_class" value="" size="30" />      
-								</div>  
-							</div>
-
-							<div class="form-group">
-								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_business_class.labelBusinessTableName} *:</label>      
-								<div class="col-md-9"> 
-									 <input class="form-control input-md" type="text" name="business_table_name" value="${plugin_model.pluginName?replace("-", "_")}_" size="30" />      
-								</div>  
-							</div>
-			 
-							<div class="form-group">
-								<div class="col-md-offset-3 col-md-9">
-								<button type="submit" name="action_createBusinessClass" class="btn btn-primary">
-									#i18n{pluginwizard.pluginwizard_create_business_class.buttonCreateClass}
-								</button>                    
-								<button type="submit" name="view_manageBusinessClasses" class="btn btn-default">
-									#i18n{pluginwizard.pluginwizard_create_business_class.buttonBack}
-								</button>
-								</div>
-							</div>    
-						</fieldset>
-					</form>        
-				</div>
-				<div class="clearfix"></div>
-			</div>
-		</div>
-	</div>
+                                <!-- Group form database table name -->
+                                <div class="row mb-3 align-items-center">
+                                    <label class="col-form-label col-md-2 text-end">
+                                        #i18n{pluginwizard.pluginwizard_create_business_class.labelBusinessTableName} * :
+                                    </label>
+                                    <div class="col-md-10">
+                                        <input class="form-control" type="text"
+                                               name="business_table_name"
+                                               value="${plugin_model.pluginName?replace('-', '_')}_" size="30" />
+                                    </div>
+                                </div>
+								
+								<!-- Submit Buttons -->
+                                <div class="row mb-3">
+                                    <div class="col-md-9 offset-md-3">
+                                        <button type="submit" name="action_createBusinessClass" class="btn btn-primary me-2">
+                                            #i18n{pluginwizard.pluginwizard_create_business_class.buttonCreateClass}
+                                        </button>
+                                        <button type="submit" name="view_manageBusinessClasses" class="btn btn-secondary">
+                                            #i18n{pluginwizard.pluginwizard_create_business_class.buttonBack}
+                                        </button>
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
+                    <!-- End Card Content-->
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
