--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin.html
@@ -1,82 +1,115 @@
 <#include "sidebar.html" />
 
 <div class="row">
-    <div class="container">
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <div class="col-md-3" > 
-                    <@sidebar step="creation" />
-                    <div class="well">#i18n{pluginwizard.pluginwizard_create_plugin.pageHelp}&nbsp;</div>
-                </div>
-
-                <div class="col-md-9">
-                    <#include "infos_handler.html" />
-                    <#include "errors_handler.html" />
-
-                    <form action="jsp/site/Portal.jsp" class="form-horizontal" method="post">               
-                        <fieldset>  	 		
-                            <legend>
-                                #i18n{pluginwizard.pluginwizard_create_plugin.pageTitle}      
-                            </legend>     
-                            <div class="pull-right">
-                            <img src="images/local/skin/java.png" alt="Java logo" width="80" /> <strong>OR</strong>
-                            <img src="images/local/skin/kotlin.png" alt="Kotlin logo" width="80" />
-                            </div>
-                            <input type="hidden" name="page" value="pluginwizard" />			
-                            <input type="hidden" name="action" value="createPlugin" />	
-
-                            <div class="form-group">
-                                <div class="col-md-8">
-                                    <h5>#i18n{pluginwizard.pluginwizard_create_plugin.labelSummary} :</h5>
-                                    <ul>
-                                        <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddBusinessClasses}</li>             
-                                        <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddJspBean}</li>             
-                                        <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddXPage}</li>
-                                        <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddBackOfficeJsp}</li>             
-                                        <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddBackOfficeTemplate}</li>            
-                                        <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddResourceFiles}</li>           
-                                        <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddPluginPropertiesFile}</li>             
-                                        <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddSpringContextXml}</li>             
-                                        <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddPluginXmlDefinition}</li>             
-                                        <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddSqlFiles}</li>           
-                                        <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddMavenPom}</li>             
-                                    </ul>
-                                </div>
-                            </div>
-
-                            <div class="form-group well">
-                                <h4>#i18n{pluginwizard.pluginwizard_create_plugin.createPlugin}</h4>
-                                <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin.labelPluginName} : </label>	
-                                <div class="col-md-5">
-                                    <input type="text" class="form-control input-md" name="name" value="" />
-                                    <span class="help-block">#i18n{pluginwizard.pluginwizard_create_plugin.labelPluginNameHelp}</span>
-                                </div>
-                                <div class="col-md-4">                       
-                                    <input class="btn btn-primary" name="do_create_plugin" value="#i18n{pluginwizard.pluginwizard_create_plugin.buttonCreatePlugin}" type="submit" />                        
-                                </div>
-                            </div>
-
-                        </fieldset>
-                    </form>	
-
-                    <form action="jsp/site/Portal.jsp" class="form-horizontal" method="post" enctype="multipart/form-data">
-                        <input type="hidden" name="page" value="pluginwizard" />			
-                        <input type="hidden" name="action" value="loadPlugin" />
-
-                        <div class="form-group well">
-                            <h4>#i18n{pluginwizard.pluginwizard_create_plugin.loadPlugin}</h4>
-                            <label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin.labelPluginLoad} : </label>	
-                            <div class="col-md-5">
-                                <input type="file" id="file" name="file" /> 
-                            </div>
-                            <div class="col-md-4">                       
-                                <input class="btn btn-primary" name="do_load_plugin" value="#i18n{pluginwizard.pluginwizard_create_plugin.buttonLoadPlugin}" type="submit" />                        
-                            </div>
-                        </div>
-                    </form>		 		
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-    </div>
+	<div class="container mt-4" style="font-size: 14px; line-height: 1.42857143;">
+		<div class="card">
+			<div class="card-body">
+				<div class="row">
+					
+					<!-- Side Bar-->
+					<div class="col-md-3">
+						<@sidebar step="creation" />
+						<div class="card bg-light mt-2">
+							<div class="card-body">
+								<div class="card-text">
+									#i18n{pluginwizard.pluginwizard_create_plugin.pageHelp}
+								</div>
+							</div>
+						</div>
+					</div>
+				    <!-- End Side Bar-->
+				    
+		            <!-- Card Content-->
+					<div class="col-md-9">
+						<form class="form-horizontal" method="post" action="jsp/site/Portal.jsp">
+							<fieldset>
+								<legend style="border-bottom: 1px solid #e5e5e5;">
+									#i18n{pluginwizard.pluginwizard_create_plugin.pageTitle}
+								</legend>
+								
+								<#include "errors_handler.html" />
+								<#include "infos_handler.html" />
+								
+								<div class="float-end">
+									<img src="images/local/skin/java.png" alt="Java logo"
+										width="80" /> <strong>OR</strong> <img
+										src="images/local/skin/kotlin.png" alt="Kotlin logo"
+										width="80" />
+								</div>
+								
+								<input type="hidden" name="page" value="pluginwizard" />
+								<input type="hidden" name="action" value="createPlugin" />
+								
+								<!-- list of components generated -->
+								<div class="form-group">
+									<div class="col-md-8">
+										<h5>#i18n{pluginwizard.pluginwizard_create_plugin.labelSummary} : </h5>
+										<ul class="ps-3 pb-3" style="list-style-type: disc;">
+											<li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddBusinessClasses}</li>
+											<li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddJspBean}</li>
+											<li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddXPage}</li>
+											<li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddBackOfficeJsp}</li>
+											<li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddBackOfficeTemplate}</li>
+											<li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddResourceFiles}</li>
+											<li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddPluginPropertiesFile}</li>
+											<li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddSpringContextXml}</li>
+											<li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddPluginXmlDefinition}</li>
+											<li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddSqlFiles}</li>
+											<li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddMavenPom}</li>
+										</ul>
+									</div>
+								</div>
+								
+								<!-- Create plugin section -->
+								<div class="mb-3 p-3 border rounded bg-light">
+									<h4>#i18n{pluginwizard.pluginwizard_create_plugin.createPlugin}</h4>
+									<div class="row">
+										<label class="col-md-3 col-form-label">
+											#i18n{pluginwizard.pluginwizard_create_plugin.labelPluginName} : 
+										</label>
+										<div class="col-md-5">
+											<input type="text" class="form-control" name="name" value="" /> 
+												<span class="text-muted">
+													#i18n{pluginwizard.pluginwizard_create_plugin.labelPluginNameHelp}
+												</span>
+										</div>
+										<div class="col-md-4">
+											<input class="btn btn-primary" name="do_create_plugin"
+												value="#i18n{pluginwizard.pluginwizard_create_plugin.buttonCreatePlugin}"
+												type="submit" />
+										</div>
+									</div>
+								</div>
+	
+							</fieldset>
+						</form>
+						
+						<!-- Load config section -->
+						<form action="jsp/site/Portal.jsp" class="form-horizontal"
+							method="post" enctype="multipart/form-data">
+							<input type="hidden" name="page" value="pluginwizard" /> <input
+								type="hidden" name="action" value="loadPlugin" />
+	
+							<div class="mb-3 p-3 border rounded bg-light">
+								<h4>#i18n{pluginwizard.pluginwizard_create_plugin.loadPlugin}</h4>
+								<div class="row">
+									<label class="col-md-3 col-form-label">#i18n{pluginwizard.pluginwizard_create_plugin.labelPluginLoad}
+										: </label>
+									<div class="col-md-5">
+										<input type="file" id="file" name="file" />
+									</div>
+									<div class="col-md-4">
+										<input class="btn btn-primary" name="do_load_plugin"
+											value="#i18n{pluginwizard.pluginwizard_create_plugin.buttonLoadPlugin}"
+											type="submit" />
+									</div>
+								</div>
+							</div>
+						</form>
+					</div>
+					<!-- End Card Content-->
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
