--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_admin_feature.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_admin_feature.html
@@ -1,114 +1,161 @@
-<#include "sidebar.html" />   
+<#include "sidebar.html" />
 
 <div class="row">
-	<div class="container">
-		<div class="panel panel-default">
-			<div class="panel-body">
-				<div class="col-md-3">             
-					<@sidebar step="administration" />
-					<div class="well">         
-						#i18n{pluginwizard.pluginwizard_modify_admin_feature.pageHelp}     
-					</div>  
-				</div>
+	<div class="container mt-4" style="font-size: 14px; line-height: 1.42857143;">
+		<div class="card">
+			<div class="card-body">
+				<div class="row">
+					
+					<!-- Side Bar-->
+					<div class="col-md-3">
+						<@sidebar step="administration" />
+						<div class="card bg-light mt-2">
+							<div class="card-body">
+								<div class="card-text">
+									#i18n{pluginwizard.pluginwizard_modify_admin_feature.pageHelp}
+								 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End Side Bar-->
+                    
+                    <!-- Card Content-->
+					<div class="col-md-9">
+						<form class="form-horizontal" method="post" action="jsp/site/Portal.jsp">
+							<fieldset>
+								<legend>#i18n{pluginwizard.pluginwizard_modify_admin_feature.pageTitle}</legend>
 
-				<div class="col-md-9">
+								<#include "errors_handler.html" />
+								
+								<input type="hidden" name="page" value="pluginwizard" /> 
+								<input type="hidden" name="id" value="${feature.id}" />
 
-					<form class="form-horizontal" method="post" action="jsp/site/Portal.jsp"> 
-						<fieldset>
-							<legend>#i18n{pluginwizard.pluginwizard_modify_admin_feature.pageTitle}</legend>
-
-							<input type="hidden" name="page" value="pluginwizard" />                     
-							<input type="hidden" name="id" value="${feature.id}" />   
-
-							 <#include "errors_handler.html" />
-
-							 <div class="form-group">
-								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureTitle} : </label>                           
-								<div class="col-md-9">
-									<input class="form-control input-md" type="text" name="feature_title" value="${feature.featureTitle}" />
+								<!-- Group form Title -->
+								<div class="row mb-3 align-items-center">
+									<label class="col-form-label col-md-2 text-end">
+										#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureTitle} : 
+									</label>
+									<div class="col-md-10">
+										<input class="form-control" type="text"
+											name="feature_title" value="${feature.featureTitle}" />
+									</div>
 								</div>
-							</div>
 
-							<div class="form-group">
-								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureDescription} : </label>                        
-								<div class="col-md-9">                                                                                       
-									 <input class="form-control input-md" type="text" name="feature_description" value="${feature.featureDescription}" />                               
-								</div>    
-							</div>
+								<!-- Group form Description -->
+								<div class="row mb-3 align-items-center">
+									<label class="col-form-label col-md-2 text-end">
+										#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureDescription} : 
+									</label>
+									<div class="col-md-10">
+										<input class="form-control" type="text"
+											name="feature_description"
+											value="${feature.featureDescription}" />
+									</div>
+								</div>
 
-							<div class="form-group">
-								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureName} :                            
-								</label>                               
-								<div class="col-md-9">                                                              	                              
-									 <input class="form-control input-md" type="text" name="feature_name" value="${feature.featureName}" /> 				                                                                        
-								</div>         	  				                     
-							</div>   
+								<!-- Group form Name -->
+								<div class="row mb-3 align-items-center">
+									<label class="col-form-label col-md-2 text-end">
+										#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureName} : 
+									</label>
+									<div class="col-md-10">
+										<input class="form-control" type="text"
+											name="feature_name" value="${feature.featureName}" />
+									</div>
+								</div>
 
-							<div class="form-group">
-								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureManagement} : </label>                     
-								<div class="col-md-9">               
-									<input class="form-control input-md" type="text" name="feature_right" value="${feature.featureRight}" />                                 
-								</div> 
-							</div>
+								<!-- Group form Management -->
+								<div class="row mb-3 align-items-center">
+									<label class="col-form-label col-md-2 text-end">
+										#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureManagement} : 
+									</label>
+									<div class="col-md-10">
+										<input class="form-control" type="text"
+											name="feature_right" value="${feature.featureRight}" />
+									</div>
+								</div>
 
-							<div class="form-group">
-								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureLevel} : </label>                            
-								<div class="col-md-9">                                                                                                     
-									<select class="form-control input-md" name="feature_level">    				                              
-										<option value="0" <#if feature.featureLevel ="0">selected="selected" </#if> >
-												#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelLevel0}                              
-											</option> 
+								<!-- Group form Level -->
+								<div class="row mb-3 align-items-center">
+									<label class="col-form-label col-md-2 text-end">
+										#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelFeatureLevel} : 
+									</label>
+									<div class="col-md-10">
+										<select class="form-select" name="feature_level">
+											<option value="0"<#if feature.featureLevel="0">selected="selected"
+												</#if> >
+												#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelLevel0}
+											</option>
 
-											<option value="1" <#if feature.featureLevel ="1">selected="selected"                              
-													</#if>>#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelLevel1}                              
-											</option> 
+											<option value="1"<#if feature.featureLevel="1">selected="selected"
+												</#if>>#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelLevel1}
+											</option>
 
-											<option value="2" <#if feature.featureLevel ="2">selected="selected"                              
-												</#if>>#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelLevel2}                              
-											</option>  
+											<option value="2"<#if feature.featureLevel="2">selected="selected"
+												</#if>>#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelLevel2}
+											</option>
 
-											 <option value="3" <#if feature.featureLevel ="3">selected="selected"                              
-											</#if>>#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelLevel3}                              
-										</option>				                          
-									</select>                
-								</div>         
-							</div>
-							 
-							<div class="form-group">
-								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelBusinessClass} :  </label>        
-								<div class="col-md-9"> 
-									<#list combo_business_classes?sort_by('name') as business>
+											<option value="3"<#if feature.featureLevel="3">selected="selected"
+												</#if>>#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelLevel3}
+											</option>
+										</select>
+									</div>
+								</div>
+
+								<!-- Group form Business Class -->
+								<div class="row mb-3">
+									<label class="col-form-label col-md-2 text-end">
+										#i18n{pluginwizard.pluginwizard_modify_admin_feature.labelBusinessClass} : 
+									</label>
+									<div class="col-md-10">
 										<div class="checkbox">
-										<#if feature.getIdBusinessClasses()?seq_contains(business.code?number)>
-											<label><input type='checkbox' checked='checked' name='id_business_class${business.code}' value='${business.code}'/> &nbsp; ${business.name}</label><br />
-										<#else>
-											<#assign used = false>
-											<#list admin_features as admin_feature> 
-												<#if admin_feature.getIdBusinessClasses()?seq_contains(business.code?number)>
-													<#assign used = true>
-												</#if>
+											<#list combo_business_classes?sort_by('name') as business>
+												<div class="form-check">
+													<#if feature.getIdBusinessClasses()?seq_contains(business.code?number)>
+														<input class="form-check-input" type='checkbox' checked
+															name='id_business_class${business.code}'
+															value='${business.code}' />
+													<#else> 
+														<#assign used=false> 
+														<#list admin_features as admin_feature> 
+															<#if admin_feature.getIdBusinessClasses()?seq_contains(business.code?number)>
+																<#assign used=true></#if> 
+														</#list> 
+														<#if used> 
+															<input class="form-check-input" type="checkbox" disabled
+																name="id_business_class${business.code}"
+																value="${business.code}" />
+														<#else> 
+															<input class="form-check-input" type="checkbox" 
+																name="id_business_class${business.code}"
+																value="${business.code}" />
+														</#if>
+													</#if>
+													<label class="form-check-label" for="id_business_${business.code}">
+														${business.name}
+													</label>
+												</div>
 											</#list>
-											<#if used>
-												<label><input type="checkbox" disabled="disabled" name="id_business_class${business.code}" value="${business.code}" /> &nbsp; ${business.name}</label><br />
-											<#else>
-												<label><input type="checkbox" name="id_business_class${business.code}" value="${business.code}" /> &nbsp; ${business.name}</label><br />
-											</#if>
-										</#if>
 										</div>
-									</#list>
-								</div>  
-							</div>
-
-							<div class="form-group">
-								<div class="col-md-offset-3 col-md-9">
-									<button type="submit" name="action_modifyAdminFeature" class="btn btn-primary">#i18n{pluginwizard.pluginwizard_modify_admin_feature.modify_feature_button}</button>                                            
-									<button type="submit" name="view_manageAdminFeatures" class="btn btn-default">#i18n{pluginwizard.pluginwizard_modify_admin_feature.buttonBack}</button>
-								</div>                                    
-							</div>  
-						</fieldset>
-					</form>
+									</div>
+								</div>
+								
+								<!-- Submit Buttons -->
+								<div class="row mb-3">
+									<div class="col-md-9 offset-md-3">
+										<button type="submit" name="action_modifyAdminFeature" class="btn btn-primary">
+											#i18n{pluginwizard.pluginwizard_modify_admin_feature.modify_feature_button}
+										</button>
+										<button type="submit" name="view_manageAdminFeatures" class="btn btn-secondary">
+											#i18n{pluginwizard.pluginwizard_modify_admin_feature.buttonBack}
+										</button>
+									</div>
+								</div>
+							</fieldset>
+						</form>
+					</div>
+					<!-- End Card Content-->
 				</div>
-				<div class="clearfix"></div>
 			</div>
 		</div>
 	</div>
