--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_description.html
@@ -1,114 +1,154 @@
-<#include "sidebar.html" />   
+<#include "sidebar.html" />
 
 <div class="row">
-	<div class="container">
-		<div class="panel panel-default">
-			<div class="panel-body">
-				<div class="col-md-3">       
-					<@sidebar step="description" />
-					<div class="well">
-						#i18n{pluginwizard.pluginwizard_create_plugin_description.pageHelp}
+	<div class="container" style="font-size: 14px; line-height: 1.42857143;">
+		<div class="card">
+			<div class="card-body">
+				<div class="row">
+				    
+				     <!-- Side Bar-->
+					<div class="col-md-3">
+						<@sidebar step="description" />
+						<div class="card bg-light mt-2" height="max-auto">
+							<div class="card-body">
+								<div class="card-text">
+									#i18n{pluginwizard.pluginwizard_create_plugin_description.pageHelp}
+								</div>
+							</div>
+						</div>
 					</div>
-				</div>
-				
-				<div class="col-md-9">
-					<#include "infos_handler.html" />
-					<form class="form-horizontal" method="post" action="jsp/site/Portal.jsp" >    
-						<fieldset>
-							<h4>#i18n{pluginwizard.pluginwizard_create_plugin_description.pageTitle}</h4>                 
+            		<!-- End Side Bar-->
 
-							 <#include "errors_handler.html" />
+            		<!-- Card Content-->
+					<div class="col-md-9">
+						<#include "errors_handler.html" />
+						<#include "infos_handler.html" />
+						<form class="form-horizontal" method="post"
+							action="jsp/site/Portal.jsp">
+							<fieldset>
+								<h4>#i18n{pluginwizard.pluginwizard_create_plugin_description.pageTitle}</h4>
 
-							<input type="hidden" name="page" value="pluginwizard" />       
-							<input type="hidden" name="id_plugin" value="${plugin_model.idPlugin}" />       
-							
-							<div class="form-group">
-								<label class="col-md-3 control-label">                         	            	                        
-									#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginName} :
-								</label>       
-								<div class="col-md-9">                
-									<input type="text" class="form-control input-md" name="plugin_name" value="${plugin_model.pluginName!''}" readonly />       
+								<input type="hidden" name="page" value="pluginwizard" /> <input
+									type="hidden" name="id_plugin" value="${plugin_model.idPlugin}" />
+
+								<!-- Group form Plugin Name -->
+								<div class="row mb-3 d-flex align-items-center">
+									<label class="col-form-label col-md-2 text-end">
+										#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginName}
+										* : </label>
+									<div class="col-md-10">
+										<input type="text" class="form-control" name="plugin_name"
+											value="${plugin_model.pluginName!''}" readonly style="background-color: #eeeeee;"/>
+									</div>
 								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-md-3 control-label">Type :</label>            
-								<div class="col-md-9">
-									<select class="form-control" name="type">    				
+
+								<!-- Group form Plugin Type -->
+								<div class="row mb-3 d-flex align-items-center">
+									<label class="col-form-label col-md-2 text-end">Type *
+										:</label>
+									<div class="col-md-10">
+										<select class="form-select" name="type">
 											<option value="PLUGIN">Plugin</option>
-										 <#if ( (plugin_model.type?? && plugin_model.type= 'MODULE') || (plugin_model.pluginName?? && plugin_model.pluginName?contains('-'))  ) >
-										 	<option value="MODULE" selected>Module</option>	
-										 <#else>
-										 	<option value="MODULE">Module</option>	
-										 </#if>    				
-													
-									</select>   
-								</div>                   	
-							</div>  
+											<#if ( (plugin_model.type?? && plugin_model.type='MODULE'
+												) || (plugin_model.pluginName?? && plugin_model.pluginName?contains('-'))
+												)>
+											<option value="MODULE" selected>Module</option>
+											<#else>
+											<option value="MODULE">Module</option></#if>
 
-							<div class="form-group">
-								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginDescription} : </label>
-								<div class="col-md-9"> 
-									 <input class="form-control input-md" type="text" name="plugin_description" value="${plugin_model.pluginDescription!''}" />
+										</select>
+									</div>
 								</div>
-							</div>
 
-							<div class="form-group">
-								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProvider} : </label>
-								<div class="col-md-9"> 
-									 <input class="form-control input-md" type="text" name="plugin_provider" value="${plugin_model.pluginProvider!''}" />
+								<!-- Group form Plugin Description -->
+								<div class="row mb-3 d-flex align-items-center">
+									<label class="col-form-label col-md-2 text-end">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginDescription}
+										* : </label>
+									<div class="col-md-10">
+										<input class="form-control" type="text"
+											name="plugin_description"
+											value="${plugin_model.pluginDescription!''}" />
+									</div>
 								</div>
-							</div>
 
-						   <div class="form-group">
-								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginVersion} : </label>       
-								<div class="col-md-9"> 
-									<input class="form-control input-md" type="text" name="plugin_version"  value="${plugin_model.pluginVersion!''}" size="30" />
-								</div>                                                                              
-							</div>
-
-							<div class="form-group">
-								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginCopyright} : </label>       
-								<div class="col-md-9"> 
-									 <input class="form-control input-md" type="text" name="plugin_copyright" value="${plugin_model.pluginCopyright!''}" size="30" />
-								</div>  
-							</div>
-
-							<div class="form-group">
-								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProviderUrl} :</label>       
-								<div class="col-md-9"> 
-									 <input class="form-control input-md" type="text" name="plugin_provider_url"  value="${plugin_model.pluginProviderUrl!''}"  /> 
-								</div>              
-							</div>
-
-							<div class="form-group">
-								<label class="col-md-3 control-label">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPlugindbPoolRequired} :</label>            
-								<div class="col-md-9"> 
-									<select class="form-control input-md" name="plugin_db_pool_required">    				
-										<option value="1">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelTrue}
-										</option>    				
-										<option value="0">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelFalse}
-										</option>				
-									</select>     
-								</div>                   	
-							</div>                                                                                   
-
-							<div class="form-group">
-								<div class="col-md-offset-3 col-md-9">
-								<button type="submit" name="action_descriptionPrevious" class="btn btn-primary">
-									<i class="glyphicon glyphicon-chevron-left"></i>
-									#i18n{pluginwizard.pluginwizard_create_plugin_description.buttonBack}
-								</button>                        
-								<button type="submit" name="action_descriptionNext" class="btn btn-primary">
-									#i18n{pluginwizard.pluginwizard_create_plugin_description.buttonNext}
-									<i class="glyphicon glyphicon-chevron-right"></i>
-								</button>
+								<!-- Group form Plugin Provider -->
+								<div class="row mb-3 d-flex align-items-center">
+									<label class="col-form-label col-md-2 text-end">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProvider}
+										* : </label>
+									<div class="col-md-10">
+										<input class="form-control input-md" type="text"
+											name="plugin_provider"
+											value="${plugin_model.pluginProvider!''}" />
+									</div>
 								</div>
-							</div>                                              		
 
-						</fieldset>
-					</form>		 		
+								<!-- Group form Plugin Version -->
+								<div class="row mb-3 d-flex align-items-center">
+									<label class="col-form-label col-md-2 text-end">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginVersion}
+										* : </label>
+									<div class="col-md-10">
+										<input class="form-control" type="text" name="plugin_version"
+											value="${plugin_model.pluginVersion!''}" size="30" />
+									</div>
+								</div>
+
+								<!-- Group form Plugin Copyright -->
+								<div class="row mb-3 d-flex align-items-center">
+									<label class="col-form-label col-md-2 text-end">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginCopyright}
+										* : </label>
+									<div class="col-md-10">
+										<input class="form-control input-md" type="text"
+											name="plugin_copyright"
+											value="${plugin_model.pluginCopyright!''}" size="30" />
+									</div>
+								</div>
+
+								<!-- Group form Plugin Url -->
+								<div class="row mb-3 d-flex align-items-center">
+									<label class="col-form-label col-md-2 text-end">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProviderUrl}
+										* : </label>
+									<div class="col-md-10">
+										<input class="form-control" type="text"
+											name="plugin_provider_url"
+											value="${plugin_model.pluginProviderUrl!''}" />
+									</div>
+								</div>
+
+								<!-- Group form Plugin Pool required -->
+								<div class="row mb-3 d-flex align-items-center">
+									<label class="col-form-label col-md-2 text-end">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPlugindbPoolRequired}
+										* : </label>
+									<div class="col-md-10">
+										<select class="form-select" name="plugin_db_pool_required">
+											<option value="1">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelTrue}
+											</option>
+											<option value="0">#i18n{pluginwizard.pluginwizard_create_plugin_description.labelFalse}
+											</option>
+										</select>
+									</div>
+								</div>
+								
+								<!-- Submit Buttons -->	
+								<div class="row">
+									<div class="col-md-offset-3 col-md-9">
+										<button type="submit" name="action_descriptionPrevious"
+											class="btn btn-primary">
+											<i class="ti ti-chevron-left"></i>
+											#i18n{pluginwizard.pluginwizard_create_plugin_description.buttonBack}
+										</button>
+										<button type="submit" name="action_descriptionNext"
+											class="btn btn-primary">
+											#i18n{pluginwizard.pluginwizard_create_plugin_description.buttonNext}
+											<i class="ti ti-chevron-right"></i>
+										</button>
+									</div>
+								</div>
+
+							</fieldset>
+						</form>
+					</div>
+					<!-- End Card Content-->
 				</div>
-				<div class="clearfix"></div>
 			</div>
 		</div>
 	</div>
